--- a/App.config
+++ b/App.config
@@ -1,10 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
     <appSettings>
-        <add key="msmqToSqs.localQueueName" value="https://sqs.sa-east-1.amazonaws.com/account/queueName"/>
-        <add key="sqsToMsmq.https://sqs.sa-east-1.amazonaws.com/account/queueName" value="FormatName:DIRECT=https://nexus.melon.cl:1057/msmq/fleetrack"/>
+        <add key="awsAccessKeyId" value="*"/>
+        <add key="awsSecretAccessKey" value="*"/>
+        <add key="msmqToSqs|FormatName:DIRECT=TCP:outgoingQueue" value="https://sqs.sa-east-1.amazonaws.com/account/queueName"/>
+        <add key="sqsToMsmq|https://sqs.sa-east-1.amazonaws.com/account/queueName" value="FormatName:DIRECT=TCP:incomingQueue"/>
     </appSettings>
 </configuration>
