--- a/NLog.config
+++ b/NLog.config
@@ -4,14 +4,14 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="warn" internalLogFile="c:\temp\nlog-internal.log">
+      internalLogLevel="warn" internalLogFile="c:\Temp\nlog-internal.log">
 
   <targets>
-     <target xsi:type="AWSTarget" logGroup="msmq.integration.msmqtosqs" name="cw" region="sa-east-1"
+    <target xsi:type="file"  name="f" filename="log.txt"
             layout="${longdate} ${uppercase:${level}} ${message} ${exception:format=tostring}" />
   </targets>
 
   <rules>
-    <logger name="*" minlevel="info" writeTo="cw" />
+    <logger name="*" minlevel="error" writeTo="f" />
   </rules>
 </nlog>
