use aws profile for AmazonSQSClient

--- a/App.config
+++ b/App.config
@@ -3,6 +3,7 @@
     <appSettings>
         <add key="awsAccessKeyId" value="*"/>
         <add key="awsSecretAccessKey" value="*"/>
+        <add key="AWSProfileName" value="AWS Default"/>
         <add key="msmqToSqs|FormatName:DIRECT=TCP:outgoingQueue" value="https://sqs.sa-east-1.amazonaws.com/account/queueName"/>
         <add key="sqsToMsmq|https://sqs.sa-east-1.amazonaws.com/account/queueName" value="FormatName:DIRECT=TCP:incomingQueue"/>
     </appSettings>
