--- a/App.config
+++ b/App.config
@@ -4,7 +4,7 @@
         <add key="awsAccessKeyId" value="*"/>
         <add key="awsSecretAccessKey" value="*"/>
         <add key="AWSProfileName" value="AWS Default"/>
-        <add key="msmqToSqs|FormatName:DIRECT=TCP:outgoingQueue" value="https://sqs.sa-east-1.amazonaws.com/account/queueName"/>
-        <add key="sqsToMsmq|https://sqs.sa-east-1.amazonaws.com/account/queueName" value="FormatName:DIRECT=TCP:incomingQueue"/>
+        <add key="msmqToSqs|.\private$\outgoingQueue" value="https://sqs.sa-east-1.amazonaws.com/account/queueName"/>
+        <add key="sqsToMsmq|https://sqs.sa-east-1.amazonaws.com/account/queueName" value=".\private$\incomingQueue"/>
     </appSettings>
 </configuration>
