fix AWSAccessKey / AWSSecretKey

--- a/App.config
+++ b/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <appSettings>
-        <add key="awsAccessKeyId" value="*"/>
-        <add key="awsSecretAccessKey" value="*"/>
+        <add key="AWSAccessKey" value="*"/>
+        <add key="AWSSecretKey" value="*"/>
         <add key="AWSProfileName" value="AWS Default"/>
         <add key="msmqToSqs|.\private$\outgoingQueue" value="https://sqs.sa-east-1.amazonaws.com/account/queueName"/>
         <add key="sqsToMsmq|https://sqs.sa-east-1.amazonaws.com/account/queueName" value=".\private$\incomingQueue"/>
