--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -83,4 +83,4 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4.4.1
       with:
-        folder: D:\a\msmq-to-sqs\msmq-to-sqs\bin\Release # The folder the action should deploy.
+        folder: D:\a\msmq-to-sqs\msmq-to-sqs # The folder the action should deploy.
